*** Don't forget to increment the version number in nfs.cl for each commit
*** [and leave this message at the top of the file]

2003-12-15    <dancy@CANDY2K>

	* nfs.nsi: If "install as service" option is used.. and there is
	an existing nfs.cfg file, start the service after installing.  

	If installing as a service, remove any existing service first.

2003-12-12    <dancy@CANDY2K>

	* nfs.nsi: New installer script.

	* Makefile: Added instructions to build installer.

	* loadem.cl: Added additional command line arguments for starting
	and stopping the service.  Added /quiet switch for /install,
	/remove, /start, and /stop for use in the install script.
	Former call to start-service is now execute-service.

2003-12-03    <dancy@DANCYSOFT>

	* nfs.cl: Fixed
	dircache-out-of-date-after-creating-file-in-empty-directory bug.
	
2003-12-03    <layer@HOBART>

	* Makefile: +B +cn args to lisp so it doesn't take the focus away
	  when building

2003-12-03    <dancy@DANCYSOFT>
	* Makefile:  added 'demo' rule for making demo binaries.

	* loadem.cl:  Added demo keyword arg to buildit.

	* nfs.cfg.sample: Removed *nfsdebug* and *nfslocalumask* from
	sample config.

2003-12-01    <dancy@CANDY2K>

	* nfs.cl:  Bumped version to 1.1.5.  Removed (safety 1) from
	optimization declaration.  Changed default nfslocaluid and
	nfslocalgid to 9999 and 9999.  Changed default nfslocalumask to
	0.  Changed default nfs-set-mode-bits to #o666.  Updated access
	checking code so that if *nfs-rw-uids* is 't', everyone is allowed
	read/write access.  This feature has been requested twice.
	
2003-11-06  Ahmon Dancy  <dancy@dancy>

	* Updated readme.txt to discuss proper use of *nfs-fw-uids*.
	
2003-07-03  Ahmon Dancy  <dancy@dancy>

	* Updated readme.txt  Updated nfs.cfg.sample.

2003-07-03    <dancy@CANDY2K>

	* mountd and nfsd can now use an existing portmapper instead of
	the built-in one.  This will help for people who have Microsoft's
	SFU installed.
	
2003-07-02    <Ahmon Dancy@GOBY>
